--- a/css/layout2.css
+++ b/css/layout2.css
@@ -12,6 +12,37 @@ html {
 
 .h1, h1{ font-weight: 100!important;}
 
+.carousel-overlay-wrapper {
+    position: relative;
+}
+
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4), 
+        rgba(0, 0, 0, 0.6)
+    );
+    z-index: 1;
+}
+
+.herotitle {
+	font-family: "Poppins", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    text-align: center;
+	font-size: 5rem;
+    color: white;
+    font-weight: 500;
+    z-index: 2;
+}
+
 #scroll_arrow {
 	color: #ff6600;
 	z-index: 9999 !important;
@@ -384,7 +415,7 @@ button:focus {
 	padding-left: 4%;
 	padding-bottom: 10px;
 	margin-top: 20px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .footer_text {
@@ -2162,9 +2193,8 @@ padding-left:90px;
 .service-card {
     background-color: var(--background-light);
 	padding: 1.5rem;
-	min-height: 350px;
 	/*margin-top: 3.5rem;*/
-    padding: 40px 0;
+    padding: 20px 0;
 	
 
 	
@@ -2278,7 +2308,7 @@ padding-left:90px;
     padding: 12px 30px;
     border-radius: 5px;
     font-weight: 600;
-    margin: 10px;
+	width: 220px;
     transition: all 0.3s ease;
 }
 
@@ -2309,7 +2339,27 @@ padding-left:90px;
 
 .features-section{margin-top: 3.5rem;}
 
+.featureicon{
+	color: var(--accent-color);
+	font-size: 1.5rem;
+	margin-bottom: 15px;
+}
+
+.benifitsicon{
+	color: var(--accent-color);
+	font-size: 1.1rem;
+}
+
 /* Responsive Design */
+
+@media (max-width: 991.98px) {
+
+	.herotitle {
+		font-size: 3rem;
+	}
+}
+
+
 @media (max-width: 768px) {
     .main-title {
         font-size: 2.5rem;
@@ -2318,6 +2368,10 @@ padding-left:90px;
     .subtitle {
         font-size: 1.4rem;
     }
+
+	.herotitle{
+		font-size: 1.8rem;
+	}
     
     .feature-card, .module-card {
         margin-bottom: 20px;
@@ -2427,8 +2481,5 @@ padding-left:90px;
 		font-size: 2.5rem; /* Adjust text size for mobile */
 		padding: 0 15px; /* Add some padding for better readability */
 		line-height: 90%;
-
 	}
-
-
 }
