--- a/css/media2.css
+++ b/css/media2.css
@@ -496,16 +496,15 @@
    	display: none !important;
    }
    .hotel_management_software_colour_box {
+	flex-direction: row;
+	justify-content: start;
    	margin-top: 2px !important;
    	border-radius: 8px !important;
-   	padding-right: 0px !important;
-   	padding-left: 0px !important;
    	width: 100% !important;
     font-size: 1em !important;
     height: auto !important;
-    padding-bottom: 15px !important;
-    padding-top: 15px !important;
-	   margin-bottom: 8px;
+	margin-bottom: 8px;
+	padding: 20px;
    }  
    .features_ul {
    	font-size: 1em !important;
@@ -540,7 +539,7 @@
    	padding:0px !important;
    }
    .modules_box {
-    margin-bottom: 15px !important;
+    margin-bottom: 50px !important;
    }
    .services_box_text1 {
    	padding-bottom: 10px !important;
